[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/needle_top.svg" type="Texture" id=1]
[ext_resource path="res://assets/needle_bottom.svg" type="Texture" id=2]
[ext_resource path="res://scripts/needle.gd" type="Script" id=3]

[node name="needle" type="Node2D"]
script = ExtResource( 3 )

[node name="top" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="bottom" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="assemble" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="decay" type="Timer" parent="."]
one_shot = true

[node name="slim" type="Timer" parent="."]
wait_time = 0.075
one_shot = true
[connection signal="timeout" from="assemble" to="." method="_on_assemble_timeout"]
[connection signal="timeout" from="decay" to="." method="_on_decay_timeout"]
[connection signal="timeout" from="slim" to="." method="_on_slim_timeout"]
